# Bunch_Lattice

./: README.md
bunch_lattice/: __init__.py
bunch_lattice/errors/: __init__.py
bunch_lattice/lattice/: BaseAccLatticeLib.py  BaseAccNodes.py  BunchAccNodes.py  BunchApertureNodes.py  BunchLatticeFunc.py  BunchRfGapNodes.py  FieldOverlappingBunchNodes.py  LatticeLib.py  LinacAccLatticeLib.py  LinacDiagnosticsNodes.py  LinacFieldOverlappingNodes.py  LinacRfGapNodes.py  TransportMatrixGenBunchNodes.py  __init__.py  meson.build
bunch_lattice/lattice_modifications/: __init__.py  apertures_additions_lib.py  errors_modifications_lib.py  meson.build  quad_overlap_modifications_lib.py  rf_models_modifications_lib.py  rf_quad_overlap_modifications_lib.py  sns_aperture_additions.py
bunch_lattice/linac_parsers/: sns_linac_lattice_factory.py
bunch_lattice/materials/: VacuumWindowLinacNode.py  __init__.py  meson.build
bunch_lattice/orbit_correction/: __init__.py  meson.build  transport_lines_orbit_correction.py
bunch_lattice/overlapping_fields/: __init__.py  jparc_enge_func_factory.py  meson.build  overlapping_quad_fields_lib.py  sns_enge_func_factory.py
bunch_lattice/parsers/: __init__.py  jparc_lattice_factory.py  meson.build  sns_lattice_factory.py
bunch_lattice/rf_field_readers/: __init__.py  meson.build
tests/: lattice_test.py  pyorbit3_sns_sts_linac_mebt_hebt2.py
