py_sources = files([
    '__init__.py',
    'LatticeLib.py',
    'BunchAccNodes.py',
    'BunchLatticeFunc.py',
    'BunchRfGapNodes.py',
    'BunchApertureNodes.py',
    'FieldOverlappingBunchNodes.py',
    'TransportMatrixGenBunchNodes.py',
    'LinacDiagnosticsNodes.py'
])

python.install_sources(
    py_sources,
    subdir: 'bunch_lattice/lattice',
    # pure: true,
)
