


py_sources = files([
    '__init__.py',
    'rf_models_modifications_lib.py',
	'apertures_additions_lib.py',
	'sns_aperture_additions.py',
	'rf_quad_overlap_modifications_lib.py',
	'quad_overlap_modifications_lib.py',
	'errors_modifications_lib.py'
])

python.install_sources(
    py_sources,
    subdir: 'bunch_lattices/lattice_modifications',
    # pure: true,
)        
